#363 - Add Sailing Storages, tracking cargo holds in 5 boats and also lost cargo from capsized boats