@@ -26,16 +26,6 @@
 
 package dev.thource.runelite.dudewheresmystuff;
 
-import com.google.common.collect.ImmutableMap;
-import dev.thource.runelite.dudewheresmystuff.carryable.CarryableStorageManager;
-import dev.thource.runelite.dudewheresmystuff.coins.CoinsStorageManager;
-import dev.thource.runelite.dudewheresmystuff.death.DeathStorageManager;
-import dev.thource.runelite.dudewheresmystuff.minigames.MinigamesStorageManager;
-import dev.thource.runelite.dudewheresmystuff.playerownedhouse.PlayerOwnedHouseStorageManager;
-import dev.thource.runelite.dudewheresmystuff.stash.StashStorageManager;
-import dev.thource.runelite.dudewheresmystuff.world.WorldStorageManager;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
@@ -53,31 +43,13 @@ public enum Tab {
   DEATH("Death Storage", ItemID.SKULL),
   POH_STORAGE("POH Storage", ItemID.POH_COS_ROOM_ARMOUR_CASE_MAHOGANY),
   STASH_UNITS("STASH Units", ItemID.POH_WALLCHART_4),
+  SAILING("Sailing Storage", ItemID.VIKING_POINTLESS_SHIPTOY),
   SEARCH("Search", -1),
   DEBUG("Debug", ItemID.BLUECOG);
 
-  public static final ImmutableMap<Class<? extends StorageManager<?, ?>>, Tab> MANAGER_TAB_MAP =
-      ImmutableMap.<Class<? extends StorageManager<?, ?>>, Tab>builder()
-          .put(DeathStorageManager.class, DEATH)
-          .put(CoinsStorageManager.class, COINS)
-          .put(CarryableStorageManager.class, CARRYABLE_STORAGE)
-          .put(WorldStorageManager.class, WORLD)
-          .put(StashStorageManager.class, STASH_UNITS)
-          .put(PlayerOwnedHouseStorageManager.class, POH_STORAGE)
-          .put(MinigamesStorageManager.class, MINIGAMES)
-          .build();
   public static final List<Tab> TABS =
-      Collections.unmodifiableList(
-          Arrays.asList(
-              OVERVIEW,
-              DEATH,
-              COINS,
-              CARRYABLE_STORAGE,
-              STASH_UNITS,
-              POH_STORAGE,
-              WORLD,
-              MINIGAMES,
-              SEARCH));
+      List.of(OVERVIEW, DEATH, COINS, CARRYABLE_STORAGE, STASH_UNITS, POH_STORAGE, WORLD,
+          SAILING, MINIGAMES, SEARCH);
 
   private final String name;
   private final int itemId;
